keyboard_input.cpp
@@ -235,6 +235,8 @@ void KeyboardInputRedirection::processKey(uint32_t key, InputRedirection::Keyboa
         return;
     }
     m_input->processFilters(std::bind(&InputEventFilter::keyEvent, std::placeholders::_1, &event));
+
+    m_xkb->forwardModifiers();
 }
 
 void KeyboardInputRedirection::processModifiers(uint32_t modsDepressed, uint32_t modsLatched, uint32_t modsLocked, uint32_t group)
